<resources>
    <string name="app_name">DogsAPP</string>
    <string name="facebook_app_id">126007484793692</string>
    <string name="fb_login_protocol_scheme">fb126007484793692</string>


    <!-- A -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
<![CDATA[
<b>DogsAPP 2017</b><br>
Versao %s<br><br>
<a href="http://www.fiap.com.br">http://fiap.com.br</a><br><br><br>
Dev: Washington Alexandre da silva.
	]]>
	</string>
    <string name="about_dialog_title">DogsAPP</string>
    <string name="action_video_browser">Browser</string>
    <string name="action_video_player">Video Player</string>
    <string name="action_video_videoview">VideoView</string>
    <string name="Atualizar">Update</string>
    <string name="select_dog">select</string>

    <!-- C -->
    <string name="dogs">Dogs</string>
    <string name="configuracoes">Settings</string>
    <string name="small">Small</string>

    <!-- D -->
    <string name="descricao">Description</string>

    <!-- E -->
    <string name="medium">Medium</string>
    <string name="editar">To edit</string>
    <string name="excluir">Delete</string>

    <!-- L -->
    <string name="large">Large</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <!-- M -->
    <string name="mapa">Map</string>
    <string name="msg_alerta_permissao">To use this application, you must accept the permissions.</string>
    <string name="msg_error_conexao_indisponivel">Connection unavailable. Check your internet.</string>
    <!-- menu_frag_mapa.xml -->
    <string name="mapa_normal">Normal Mode</string>
    <string name="mapa_satelite">Satellite Mode</string>
    <string name="mapa_terreno">Land Mode</string>
    <string name="mapa_hibrido">Hybrid Mode</string>
    <string name="mapa_location_directions">Location</string>
    <string name="mapa_location_dog">Dog Location</string>
    <string name="mapa_zoom_in">Zoom (+)</string>
    <string name="mapa_zoom_out">Zoom (-)</string>


    <!-- N -->
    <string name="nav_drawer_username">Washington Alexandre da Silva</string>
    <string name="nav_drawer_email">was.alexandre42@gmail.com</string>
    <string name="nome">Name</string>

    <!-- O -->
    <string name="ok">OK</string>
    <string name="login_user">your user</string>
    <string name="login_required_user">User required</string>
    <string name="login_pass">your pass</string>
    <string name="connect">Connect</string>
    <string name="login_required_password">Password required</string>
    <string name="login_invalid_user">Invalid user</string>
    <string name="login_invalid_password">Invalid password</string>
    <string name="keep_connected">Keep connected</string>
    <string name="or">OR</string>

    <!-- S -->
    <string name="share">Share</string>
    <string name="sobre">About</string>
    <string name="call_fiap">Call FIAP</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="exit">Exit</string>


</resources>
